# customer-support-email-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/api/v1/: router.py
src/api/v1/endpoints/: emails.py  followups.py  health.py
src/core/: config.py  exceptions.py  logging.py
src/graph/: agent_graph.py  state.py
src/knowledge_base/: dummy_documents.py  faq.md  policies.md  troubleshooting.md
src/nodes/: classify.py  draft.py  escalate.py  ingest.py  retrieve.py  review.py  send.py
src/schemas/: agent.py  email.py
src/scripts/: seed_pinecone.py
src/services/: email_service.py  email_store.py  followup_service.py  knowledge_service.py  llm.py  pinecone_service.py
src/static/: inbox.html  index.html
src/utils/: prompts.py  text.py
tests/: conftest.py
tests/integration/: test_api_emails.py  test_api_followups.py  test_placeholder.py
tests/unit/: test_followup_service.py  test_graph_routing.py  test_knowledge_service.py  test_nodes.py  test_placeholder.py  test_schemas.py  test_text_utils.py
