[project]
name = "customer-support-email-agent"
version = "0.1.0"
description = "AI-powered customer support email agent using LangGraph, LangChain, FastAPI, and OpenAI"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    # API
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",

    # LangGraph / LangChain
    "langgraph==0.2.73",
    "langchain==0.3.18",
    "langchain-openai==0.3.6",
    "langchain-core==0.3.37",
    "langchain-community==0.3.17",

    # OpenAI
    "openai==1.59.7",

    # Pydantic
    "pydantic==2.10.5",
    "pydantic-settings==2.7.1",

    # Pinecone vector database
    "pinecone==5.4.2",
    "langchain-pinecone==0.2.0",

    # Embeddings
    "langchain-openai==0.3.6",

    # Utilities
    "tenacity==9.0.0",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
